# bank-agent-demo

./: .env.example  .gitignore  README.md  init-projects  pyproject.toml
bank-customer-agent/: .env.example  README.md  main.py  pyproject.toml
bank-customer-agent/bank_customer/: agent.py  cli.py  client.py  config.py  evaluator.py  messages.py  prompts.py  runner.py  skills.py
bank-customer-agent/skills/: alice_balance.md  ben_confused_customer.md  carl_frustrated_quit.md  david_loan.md  elena_planned_borrower.md  john_forgot_id.md  lily_overly_polite.md  marcus_angry_triple.md  nina_skeptical_researcher.md  owen_balance_dispute.md  rachel_angry_balance_loan.md  sara_buy_stock.md  tommy_quick_check_rate_loan.md  viktor_forgot_id_full_tour.md
bank-customer-agent/tests/: test_client.py  test_config.py  test_prompts.py  test_runner.py  test_skills.py
bank-rep-agent/: .env.example  README.md  main.py  pyproject.toml
bank-rep-agent/bank_demo/: __init__.py  agent.py  api.py  cli.py  config.py  finance.py  graph.py  messages.py  mock_data.py  prompts.py  skill_selection.py  tools.py  (+1 more)
bank_demo/: agent.py  cli.py  config.py  graph.py  mcp_tools.py  mock_data.py  prompts.py  tools.py  utils.py
orchestrator/: .env.example  README.md  main.py  pyproject.toml  y
orchestrator/orchestrator/: __init__.py  agent.py  cli.py  config.py  executor.py  plan.py  prompts.py  rep_server.py  session_runner.py  skill_catalog.py  skill_index.py
orchestrator/tests/: test_plan.py  test_rep_server.py  test_session_runner.py  test_skill_catalog.py  test_skill_index.py
tests/: test_customer_lookup.py  test_mcp_currency_capability.py  test_skill_selection.py
(+11 files in other folders)
