[project]
name = "bank-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.34.0",
  "langchain-core>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-mcp-adapters>=0.1.0",
  "langgraph>=0.2.0",
  "mcp>=1.10.1",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pytest>=8.0.0",
]
