[project]
name = "bank-orchestrator"
version = "0.1.0"
description = "Conversational orchestrator for bank demo automation runs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.34.0",
  "httpx>=0.27.0",
  "langchain-anthropic>=0.3.0",
  "langchain-core>=0.3.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.pytest.ini_options]
pythonpath = ["."]
